# moshengAI-voxcpm

./: .gitignore  ACCESS_URL.txt  CURRENT_STATUS.txt  Dockerfile.backend  Dockerfile.frontend  GIT_SETUP.md  HOW_TO_ACCESS.txt  HOW_TO_USE.md  LOCAL_DEV_ACCESS.md  README_SERVICES.md  SSH_TROUBLESHOOTING.md  START_ALL_SERVICES.sh  START_HERE.txt  STOP_ALL_SERVICES.sh  apply_fixes_correct.py  check_status.sh  docker-compose.yml  env.example  fix_indextts.py  fix_tts_compatibility.py  manage_db.py  monitor_dashboard.py  monitor_web.py  pyproject.toml  quick_check.sh  start_backend.sh  test_concurrent_writes.py
backend/app/: main.py
documents/: ACCESS_GUIDE.md  BUGS_FIXED.md  DATABASE_MANAGEMENT_GUIDE.md  DIAGNOSIS_REPORT.md  FINAL_SOLUTION.md  FINAL_SUMMARY.md  MONITORING_GUIDE.md  MONITOR_SUMMARY.md  MONITOR_WEB_GUIDE.md  MVP_IMPLEMENTATION_COMPLETE.md  NETWORK_TROUBLESHOOTING.md  SERVICE_STATUS.md  SYSTEM_SUMMARY.md  TESTING_GUIDE.md  UI_IMPROVEMENTS.md  V0_1_ACCEPTANCE_TTS.md  V0_1_PORTS_AND_ENV.md
frontend/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
prompt_voice/female/: 女声1大气磁性.txt  女声1磁性大气.txt  女声1质感磁性.txt  女声2大气磁性.txt  女声2磁性大气.txt  女声2质感磁性.txt  女声3大气磁性.txt  女声3磁性大气.txt  女声3磁性质感.txt  女声3质感磁性.txt  女声4可爱女童.txt  女声4女童可爱.txt  女声57模仿女童.txt  女声57模仿男童1.txt  女声57模仿男童2.txt  女声57模仿男童3.txt  女声5亲切温暖.txt  女声5大气质感.txt  女声5知性亲切.txt  女声5知性温柔.txt  女声5质感大气.txt  女声609大气磁性.txt  女声609知性亲切.txt  女声609磁性知性.txt  女声617中年叙述.txt  女声617中年沉稳.txt  女声617中老年讲述.txt  女声617大气磁性.txt  女声617磁性大气.txt  女声6知性磁性.txt  (+4 more)
tools/: replace_ports.py  tts_benchmark.py
(+134 files in other folders)
